--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,11 @@ data/data
 data/eff_tl
 .bash_history
 .python_history
+DeepSpeed
+.cache
+.conda
+.config
+.nv
+model_data
+setup.py
+setup.cfg
